--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,3 +1,6 @@
+// ui设计师已经把想到的所有相似的颜色都填进去了。。。。
+// 多点关爱～
+
 $mwidth: 84.2%;
 $fbg: #333333;
 $fbg2: #3d3d3d;
@@ -6,6 +9,11 @@ $color_blue: #475072;
 $color_grey: #8f8f8f;
 $color_orange: #ff6142;
 $color_base: #282828;
+$color_black: #666666;
+
+$line_grey: #e5e5e5;
+$line_light: #f2f2f2;
+$line_grey2: #f0f0f0;
 
 @mixin eps{
 	white-space: nowrap;
