add connect page

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,18 +1,24 @@
 // ui设计师已经把想到的所有相似的颜色都填进去了。。。。
 // 多点关爱～
+// 愿天堂只有3种颜色 双手合十 🙏
 
 $mwidth: 84.2%;
 $fbg: #333333;
 $fbg2: #3d3d3d;
+$bbg: #f6f8fa;
+$light_blue: #edf7ff;
 
 $color_blue: #475072;  
 $color_grey: #8f8f8f;
 $color_orange: #ff6142;
 $color_base: #282828;
 $color_black: #666666;
+$color_orange2: #fc6719;
+$color_orange3: #fe7054;
 
 $line_grey: #e5e5e5;
 $line_light: #f2f2f2;
+$line_light2: #d2d4d6;
 $line_grey2: #f0f0f0;
 
 @mixin eps{
