--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -24,8 +24,11 @@
     }
     p{
         font-size: 28px;
-        line-height: 50px;
+        line-height: 1.8;
         text-align: justify;
+    }
+    h2,p{
+        transition: 0.6s;
     }
 }
 .main{
@@ -54,10 +57,10 @@
     padding: 4px 7.1%;
     box-sizing: border-box;
     h3{
-        padding-top: 26px;
+        padding-top: 0.5em;
         color: #fff;
         font-size: 30px;
-        line-height: 66px;
+        line-height: 2;
         em{
             font-size: 42px;
             color: $color_orange3;
@@ -83,7 +86,10 @@
     p{
         font-size: 18px;
         color: $bbg;
-        line-height: 30px;
+        line-height: 1.6;
+    }
+    h3,p,h2 em{
+        transition: 0.6s;
     }
 }
 .end{
