--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -9,6 +9,7 @@
         color: #fff;
         width: 100%;
         text-align: center;
+        transition: 0.6s;
         &:nth-child(1){
             font-size: 110px;
         }
@@ -43,22 +44,21 @@
     height: 682px;
     background: #f8f9fb url(../../images/map.jpg) no-repeat center center;
     box-sizing: border-box;
+    background-size: auto 100%;
+    transition: 0.6s;
     
     ul{
-        margin-top: 112px;
+        width: $mwidth;
+        margin: 112px auto 0;
         display: flex;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
         li{
             width: 160px;
-            margin-right: 184px;
             transition: 0.6s;
             cursor: pointer;
             &:hover{
                 transform: translate3d(0,-20%,0);
-            }
-            &:last-child{
-                margin-right: 0;
             }
             div{
                 display: flex;
@@ -72,8 +72,7 @@
                 background-color: $color_orange;
                 text-align: center;
                 color: #fff;
-                font-size: 68px;
-                line-height: 42px;
+                font-size: 50px;
             }
             > p{
                 color: $color_base;
@@ -94,15 +93,15 @@
         max-width: $bwidth;
         align-items: center;
         li{
-            position: relative;
-            // margin-right: 60px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             width: 440px;
-            height: 96px;
-            padding: 15px 0 0 146px;
+            // height: 96px;
+            padding: 15px 0;
             border: 2px solid $line_grey;
             border-radius: 8px;
             box-sizing: border-box;
-            transition: 0.6s;
             background-color: #fff;
             cursor: pointer;
             &:hover{
@@ -110,22 +109,27 @@
                 transform: scale(1.1)
             }
             i{
-                position: absolute;
-                top: 15px;
-                left: 61px;
                 width: 66px;
                 height: 66px;
                 border-radius: 50%;
                 background-color: $color_blue;
                 background-position: center center;
                 background-repeat: no-repeat;
-                
+                margin-right: 10px;
+                background-size: 90%;
             }
             p{
                 font-size: 18px;
                 line-height: 33px;
                 color: $color_black;
                 @include eps;
+            }
+            &:nth-child(2) i{
+                background-size: 85%;
+                background-position: 50% 70%;
+            }
+            &:nth-child(3) i{
+                background-position: 55% 40%;
             }
         }
         $icons: "icon_wifi.png" "icon_rocket.png" "icon_circle.png";
@@ -140,6 +144,10 @@
         width: $mwidth;
         max-width: $bwidth;
         margin: 0 auto 45px;
+    }
+
+    &,li,li i,li p{
+        transition: 0.6s;
     }
 }
 .advantage,.group{
@@ -181,6 +189,9 @@
     h2, > p{
         color: #fff;
     }
+    &,img,h2{
+        transition: 0.6s;
+    }
 }
 .group{
     margin-bottom: 105px;
@@ -219,6 +230,9 @@
         }
 
     }
+    &,li img,li h2,li p{
+        transition: 0.6s;
+    }
 }
 .cooperation{
     background-color: #f6f8fa;
@@ -243,6 +257,7 @@
                 margin-bottom: 19px;
             }
             p{
+                transition: 0.6s;
                 font-size: 18px;
                 line-height: 30px;
             }
@@ -267,13 +282,16 @@
             position: relative;
             display: flex;
             flex: 1;
-            height: 152px;
+            padding: 10px;
             margin-right: 20px;
             border: 2px solid $line_grey2;
             justify-content: center;
             align-items: center;
             &:last-child{
                 margin-right: 0px;
+            }
+            img{
+                max-width: 90%;
             }
             > a{
                 position: absolute;
