--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -3,10 +3,10 @@
         .banner{
             p{
                 &:nth-child(1){
-                    font-size: 100px;
+                    font-size: 72px;
                 }
                 &:nth-child(2){
-                    font-size: 70px;
+                    font-size: 48px;
                 }
             }
         }
@@ -41,10 +41,10 @@
     .connect.media{
         .connect_l{
             h2{
-                font-size: 28px;
+                font-size: 20px;
             }
             address,p{
-                font-size: 16px;
+                font-size: 14px;
             }
         }
     }
@@ -79,10 +79,10 @@
         .banner{
             p{
                 &:nth-child(1){
-                    font-size: 80px;
+                    font-size: 60px;
                 }
                 &:nth-child(2){
-                    font-size: 55px;
+                    font-size: 40px;
                 }
             }
         }
@@ -97,14 +97,15 @@
                     height: 40px;
                 }
                 p{
-                    font-size: 16px;
-                    line-height: 24px;
+                    font-size: 14px;
                 }
             }
         }
         .advantage,.group{
-            ul li h3{
-                font-size: 32px;
+            ul li{
+                h3{
+                    font-size: 24px;
+                }
             }
         }
         .advantage{
@@ -121,7 +122,7 @@
                     width: 300px;
                 }
                 p{
-                    font-size: 26px;
+                    font-size: 22px;
                 }
             }
         }
@@ -137,10 +138,10 @@
     .connect.media{
         .connect_l{
             h2{
-                font-size: 26px;
+                font-size: 18px;
             }
             address,p{
-                font-size: 14px;
+                font-size: 12px;
             }
         }
     }
@@ -176,10 +177,10 @@
         .banner{
             p{
                 &:nth-child(1){
-                    font-size: 70px;
+                    font-size: 45px;
                 }
                 &:nth-child(2){
-                    font-size: 48px;
+                    font-size: 30px;
                 }
             }
         }
@@ -196,13 +197,14 @@
                 }
                 p{
                     font-size: 12px;
-                    line-height: 18px;
                 }
             }
         }
         .advantage,.group{
-            ul li h3{
-                font-size: 28px;
+            ul li{
+                h3{
+                    font-size: 20px;
+                }
             }
         }
         .advantage{
@@ -219,7 +221,7 @@
                     width: 240px;
                 }
                 p{
-                    font-size: 22px;
+                    font-size: 18px;
                 }
             }
         }
