--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -1,3 +1,4 @@
+@import "./base";
 @media screen and (max-width:1440px){
     .home {
         .banner{
@@ -253,9 +254,92 @@
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px){
-
+    .mz-foot.media{
+        > div:first-child ul, > div:last-child p{
+            padding-right: 40px;
+        }
+    }
 }
 
 @media only screen and (max-width: 479px){
-
+    .media{
+        .mz-head{
+            height: 41px;
+            > div{
+                width: 100%;
+                > a{
+                    z-index: 10;
+                    &:first-child{
+                        left: 10px;
+                        top: 3px;
+                        width: 72px;
+                        height: 34px;
+                    }
+                    &:last-child{
+                        position: absolute;
+                        top: 8px;
+                        right: 10px;
+                        width: 30px;
+                        height: 25px;
+                        background: url(../images/menu2.png) no-repeat center center;
+                        background-size: 30px;
+                        &.mz-head-close{
+                            background-image: url(../images/close2.png);
+                            background-size: 24px;
+                        }
+                    }
+                }
+            }
+            ul{
+                opacity: 0;
+                flex-direction: column;
+                transform: translate3d(0,-100%,0);
+                transition: 0.6s;
+                background-color: transparent;
+                &.active{
+                    opacity: 1;
+                    transform: translate3d(0,42px,0);
+                }
+                li{
+                    width: 100%;
+                    height: 45px;
+                    text-align: center;
+                    line-height: 45px;
+                }
+            }
+            &.active{
+                > div > a:last-child{
+                    background-image: url(../images/menu.png);
+                    &.mz-head-close{
+                        background-image: url(../images/close.png);
+                    }
+                }
+                ul{
+                    background-color: $bbg;
+                }
+                .mz-head-mask{
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 41px;
+                    background-color: $bbg;
+                }
+            }
+        }
+        &.mz-head-warp{
+            height: 41px;
+            .mz-head{
+                > div > a:last-child{
+                    background-image: url(../images/menu.png);
+                    &.mz-head-close{
+                        background-image: url(../images/close.png);
+                    }
+                }
+                ul{
+                    background-color: $bbg;
+                }
+            }
+        }
+    }
 }
