--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -48,7 +48,9 @@
     box-sizing: border-box;
     background-size: auto 100%;
     transition: 0.6s;
-    
+    .dot,.more{
+        display: none;
+    }
     ul{
         width: $mwidth;
         margin: 112px auto 0;
@@ -56,7 +58,6 @@
         justify-content: space-between;
         padding: 0 8%;
         box-sizing: border-box;
-        align-items: center;
         li{
             width: 160px;
             transition: 0.6s;
@@ -145,7 +146,7 @@
             }
         }
     }
-    > img{
+    .surf-img img{
         display: block;
         width: $mwidth;
         max-width: $bwidth;
@@ -265,7 +266,7 @@
             p{
                 transition: 0.6s;
                 font-size: 18px;
-                line-height: 30px;
+                line-height: 1.7;
             }
         }
     }
