--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -265,334 +265,45 @@
 }
 
 @media only screen and (max-width: 479px){
-    /*对应 mz-head.vue、mz-foot*/
-    .media{
-        $width: 41px;
-        .mz-head{
-            height: $width;
-            > div{
-                width: 100%;
-                height: $width;
-                > a{
-                    z-index: 10;
-                    &:first-child{
-                        left: 10px;
-                        top: 3px;
-                        width: 72px;
-                        height: 34px;
-                    }
-                    &:last-child{
-                        position: absolute;
-                        top: 8px;
-                        right: 10px;
-                        width: 30px;
-                        height: 25px;
-                        background: url(../images/menu2.png) no-repeat center center;
-                        background-size: 30px;
-                        &.mz-head-close{
-                            background-image: url(../images/close2.png);
-                            background-size: 24px;
-                        }
-                    }
-                }
-            }
-            ul{
-                opacity: 0;
-                flex-direction: column;
-                transform: translate3d(0,-100%,0);
-                transition: 0.6s;
-                background-color: transparent;
-                &.active{
-                    opacity: 1;
-                    transform: translate3d(0,42px,0);
-                }
-                li{
-                    width: 100%;
-                    height: 35px;
-                    line-height: 35px;
-                    text-align: center;
-                    font-size: 14px;
-                }
-            }
-            &.active{
-                > div > a:last-child{
-                    background-image: url(../images/menu.png);
-                    &.mz-head-close{
-                        background-image: url(../images/close.png);
-                    }
-                }
-                ul{
-                    background-color: $bbg;
-                }
-                .mz-head-mask{
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: $width;
-                    background-color: $bbg;
-                }
-            }
+    
+    @import "./common_m"; // 对应 mz-head.vue、mz-foot
+    @import "./home_m";
+    .connect.media{
+        .connect-main{
+            width: 100%;
+            flex-direction: column-reverse;
         }
-        &.mz-head-warp{
-            height: $width;
-            .mz-head{
-                > div > a:last-child{
-                    background-image: url(../images/menu.png);
-                    &.mz-head-close{
-                        background-image: url(../images/close.png);
-                    }
-                }
-                ul{
-                    background-color: $bbg;
-                }
-            }
-        }
-        &.mz-foot{
-            > div:first-child{
-                width: 100%;
-                padding: 16px 0;
-                > a{
-                    left: 10px;
-                    top: 25px;
-                    width: 72px;
-                }
-                img{
-                    width: 54px;
-                }
-                ul{
-                    padding-right: 0;
-                    li{
-                        font-size: 12px;
-                        margin-right: 26px;
-                        &:last-child{
-                            margin-right: 10px;
-                        }
-                    }
-                }
-            }
-            > div:last-child p{
-                width: 100%;
-                height: 20px;
-                line-height: 20px;
-                font-size: 9px;
-                text-align: center;
-                padding-right: 0;
-            }
-        }
-    }
-
-    .home{
-        .about,.surf,.advantage,.group,.cooperation,.connect{
-            padding-top: 20px;
-            h2{
-                font-size: 16px;
-                line-height: 1.5;
-            }
-            > p.dot{
-                letter-spacing: 1px;
-            }
-        }
-        .banner{
-            height: 340px;
-            background-size: auto 100%;
-            p{
-                &:nth-child(1){
-                    font-size: 30px;
-                }
-                &:nth-child(2){
-                    font-size: 20px;
-                }
-            }
-        }
-        .about{
-            background-image: url(../images/map_m.jpg);
-            background-size: 100%;
+        .connect_r{
             height: 300px;
-            .dot,.more{
-                display: block;
-            }
-            .dot2{
-                display: none;
-            }
-            .more{
-                width: 80px;
-                height: 25px;
-                line-height: 25px;
-                margin: 30px auto 0;
-                text-align: center;
-                border: 1px solid $color_orange;
-                color: $color_orange;
-                font-size: 12px;
-                border-radius: 3px;
-            }
-            ul{
-                margin-top: 25px;
-                width: 100%;
-                li{
-                    width: 80px;
-                    div{
-                        width: 76px;
-                        height: 76px;
-                        margin-bottom: 21px;
-                        font-size: 24px;
-                    }
-                    > p{
-                        font-size: 12px;
-                    }
-                }
-            }
         }
-        .surf{
-            ul{
-                width: 100%;
-                flex-direction: column;
-                margin: 18px auto 16px;
-                li{
-                    width: 85%;
-                    margin-bottom: 9px;
-                    padding: 4px 30px;
-                    justify-content: flex-start;
-                    border-radius: 4px;
-                }
-            }
-            .surf-img{
-                width: 100%;
-                -webkit-overflow-scrolling: touch;
-                overflow-x: auto;
-                overflow-y: hidden;
-                height: 164px;
-                padding: 0 10px 20px;
-                margin-bottom: 18px;
-                box-sizing: border-box;
-                img{
-                    margin: 0 auto;
-                    width: auto;
-                    height: 100%;
-                }
-                &::-webkit-scrollbar{ 
-                    width: 5px;
-                    height: 5px;
-                    border: 1px solid #e8e8e8;
-                    border-radius: 3px;
-                }
-                &::-webkit-scrollbar-thumb{
-                    background-color: #64d174;
-                    border-radius: 3px;
-                }
-            }
-        }
-        .advantage,.group{
-            ul li h3{
-                font-size: 14px;
-            }
-        }
-        .group{
-            margin-bottom: 0;
-            ul{
-                margin: 15px 0 0;
-                width: 100%;
-                flex-direction: column;
-                li{
-                    flex: 1;
-                    display: flex;
-                    flex-direction: row;
-                    border: none;
-                    img{
-                        width: 43%;
-                        height: 110px;
-                    }
-                    > div{
-                        width: 57%;
-                        position: relative;
-                        top: auto;
-                        left: auto;
-                        bottom: auto;
-                        right: auto;
-                        transform: none;
-                    }
-                    > h3{
-                        display: none;
-                    }
-                    p{
-                        margin-top: 3px;
-                        font-size: 12px;
-                    }
-                    &:nth-child(2n){
-                        flex-direction: row-reverse;
-                    }
-                }
-            }
-        }
-        .advantage{
-            height: 197px;
-            background-size: auto 100%;
-            ul{
-                padding: 0 10px;
-                width: 100%;
-                margin-top: 20px;
-                box-sizing: border-box;
-                li{
-                    flex: 1;
-                    width: auto;
-                    margin-right: 10px;
-                    &:last-child{
-                        margin-right: 0;
-                    }
-                    img{
-                        width: 100%;
-                    }
-                }
-            }
-        }
-        .cooperation{
+        .connect_l{
+            padding: 20px 20px 5px;
             background-color: #fff;
-            padding-bottom: 0;
-            ul{
-                width: 100%;
-                margin-top: 10px;
-                flex-direction: column;
-                padding-bottom: 5px;
-                li {
-                    margin-right: 0;
-                    padding: 8px 0;
-                    img{
-                         margin-bottom: 15px;
-                    }
-                    h3{
-                        font-size: 14px;
-                        margin-bottom: 4px;
-                    }
-                    p{
-                        font-size: 12px;
-                    }
-                }
+            > div{
+                margin-bottom: 10px;
             }
-        }
-        .connect{
-            background-color: $bbg;
-            margin-bottom: 0;
-            padding-bottom: 5px;
-            h4{
-                padding: 13px 0 8px;
+            h2{
                 font-size: 14px;
+                margin-bottom: 5px;
             }
-            ul{
-                display: block;
-                width: 100%;
-                overflow: hidden;
-                padding-bottom: 0;
-                li{
-                    float: left;
-                    margin-left: 2.66%;
-                    margin-bottom: 2.66%;
-                    width: 46%;
-                    padding: 0;
-                }
-                .mobile_no{
-                    display: none;
-                }
+            address,p{
+                padding-left: 18px;
+                background-size: 12px;
             }
         }
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
