--- a/src/styles/home_m.scss
+++ b/src/styles/home_m.scss
@@ -146,7 +146,7 @@
         ul{
             padding: 0 10px;
             width: 100%;
-            margin-top: 20px;
+            margin-top: 10px;
             box-sizing: border-box;
             li{
                 flex: 1;
@@ -174,6 +174,7 @@
                 padding: 8px 0;
                 img{
                      margin-bottom: 15px;
+                     width: 48px;
                 }
                 h3{
                     font-size: 14px;
