--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -322,3 +322,76 @@
         }
     }
 }
+.select-overlay{
+  display: -webkit-box;
+  display: box;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  position:fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  bottom:0;
+  right:0;
+  background-color: rgba(0,0,0,.8);
+}
+.select-overlay .orange{
+  color: #f5320c;
+}
+.select-overlay h3{
+  color: #0f0f0f;
+  font-size: 30px;
+  text-align: center;
+  position: relative;
+  margin: 0;
+}
+.select-overlay h3::after{
+  content: "";
+  display: block;
+  height: 2px;
+  width: 200px;
+  background-color:#0f0f0f; 
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  margin-left: -100px;
+}
+.select-overlay h3 span{
+  background-color: #fff;
+  padding: 0 10px;
+  position: relative;
+  z-index: 1;
+}
+.select-overlay .close-sm{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 16px;
+  color: inherit;
+  z-index: 1000;
+}
+.select-overlay .content{
+  color: #666;
+  background-color: #fff;
+  padding: 30px 50px;
+  max-width: 750px;
+  min-width: 300px;
+  margin: 0 10px;
+  position: relative;
+  font-size: 17px;
+  max-height: 100%;
+  overflow-y:auto;
+  box-sizing: border-box;
+}
+.select-overlay .content p{
+  margin-top: 20px;
+  line-height: 1.8;
+}
