--- a/src/styles/home_m.scss
+++ b/src/styles/home_m.scss
@@ -14,11 +14,16 @@
         background-size: auto 100%;
         p{
             &:nth-child(1){
+                padding-top: 40px;
                 font-size: 30px;
             }
             &:nth-child(2){
                 font-size: 20px;
             }
+        }
+        a{
+            width: 86px;
+            height: 96px;
         }
     }
     .about{
